<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_task"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:padding="10dp"
            android:hint="@string/name"
            />

        <RelativeLayout
            android:id="@+id/rlDate"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            android:hint="@string/name"
            >

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                />



        </RelativeLayout>


        <Button
            android:id="@+id/btnAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>